Fix small spacing bugs
Update to use location from react router dom for dynamic styling; padding offset when on Portfolio in main and side navigations, as well as "main" content of Portfolio page

--- a/ncoover-website/src/pages/styles/Portfolio.module.css
+++ b/ncoover-website/src/pages/styles/Portfolio.module.css
@@ -1,4 +1,7 @@
 main {
-	margin-left: 3rem;
 	position: relative;
+}
+
+.portfolio {
+	margin-left: var(--side-navigation-width-offset);
 }
